[gd_scene load_steps=4 format=2]

[ext_resource path="res://Themes/MainMenuTheme.tres" type="Theme" id=1]
[ext_resource path="res://Scenes/CharacterOptions/CharacterGoal.gd" type="Script" id=2]
[ext_resource path="res://Themes/BaseFont-Bold.tres" type="DynamicFont" id=3]

[node name="CharacterGoal" type="Control"]
margin_right = 230.0
margin_bottom = 159.0
rect_min_size = Vector2( 230, 215 )
mouse_default_cursor_shape = 2
size_flags_horizontal = 3
theme = ExtResource( 1 )
script = ExtResource( 2 )
text = "Some text goes here Some text goes here"
current_sum = [ 0, 0, 0, 0 ]

[node name="MarginContainer" type="MarginContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 2

[node name="Panel" type="Panel" parent="MarginContainer"]
margin_right = 230.0
margin_bottom = 215.0
mouse_filter = 2

[node name="MarginContainer" type="MarginContainer" parent="MarginContainer/Panel"]
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 2
custom_constants/margin_right = 4
custom_constants/margin_top = 4
custom_constants/margin_left = 4
custom_constants/margin_bottom = 5

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer/Panel/MarginContainer"]
margin_left = 4.0
margin_top = 4.0
margin_right = 226.0
margin_bottom = 210.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="TextContainer" type="MarginContainer" parent="MarginContainer/Panel/MarginContainer/VBoxContainer"]
unique_name_in_owner = true
margin_right = 222.0
margin_bottom = 78.0
rect_min_size = Vector2( 0, 48 )
mouse_filter = 2
size_flags_horizontal = 3
size_flags_vertical = 3
custom_constants/margin_right = 12
custom_constants/margin_left = 12

[node name="DescriptiveText" type="Label" parent="MarginContainer/Panel/MarginContainer/VBoxContainer/TextContainer"]
unique_name_in_owner = true
margin_left = 12.0
margin_top = 13.0
margin_right = 210.0
margin_bottom = 64.0
size_flags_horizontal = 3
text = "Some text goes here Some text goes here"
align = 1
valign = 1
autowrap = true

[node name="ValuesPanel" type="ColorRect" parent="MarginContainer/Panel/MarginContainer/VBoxContainer"]
margin_top = 82.0
margin_right = 222.0
margin_bottom = 142.0
rect_min_size = Vector2( 0, 60 )
mouse_filter = 2
size_flags_horizontal = 3

[node name="MarginContainer" type="MarginContainer" parent="MarginContainer/Panel/MarginContainer/VBoxContainer/ValuesPanel"]
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 2
custom_constants/margin_right = 4
custom_constants/margin_top = 4
custom_constants/margin_left = 4

[node name="ValuesContainer" type="HBoxContainer" parent="MarginContainer/Panel/MarginContainer/VBoxContainer/ValuesPanel/MarginContainer"]
unique_name_in_owner = true
margin_left = 4.0
margin_top = 4.0
margin_right = 218.0
margin_bottom = 60.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_constants/separation = 4

[node name="Label" type="Label" parent="MarginContainer/Panel/MarginContainer/VBoxContainer/ValuesPanel"]
margin_left = 2.0
margin_top = -6.0
margin_right = 70.0
margin_bottom = 18.0
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_fonts/font = ExtResource( 3 )
text = "Goal"

[node name="SumsPanel" type="ColorRect" parent="MarginContainer/Panel/MarginContainer/VBoxContainer"]
unique_name_in_owner = true
margin_top = 146.0
margin_right = 222.0
margin_bottom = 206.0
rect_min_size = Vector2( 0, 60 )
mouse_filter = 2
size_flags_horizontal = 3

[node name="MarginContainer" type="MarginContainer" parent="MarginContainer/Panel/MarginContainer/VBoxContainer/SumsPanel"]
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 2
custom_constants/margin_right = 4
custom_constants/margin_top = 0
custom_constants/margin_left = 4
custom_constants/margin_bottom = 4

[node name="SumsContainer" type="HBoxContainer" parent="MarginContainer/Panel/MarginContainer/VBoxContainer/SumsPanel/MarginContainer"]
unique_name_in_owner = true
margin_left = 4.0
margin_right = 218.0
margin_bottom = 56.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_constants/separation = 4

[node name="Label2" type="Label" parent="MarginContainer/Panel/MarginContainer/VBoxContainer/SumsPanel"]
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -78.0
margin_top = -20.0
margin_bottom = 4.0
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_fonts/font = ExtResource( 3 )
text = "Current"
align = 2

[connection signal="resized" from="MarginContainer/Panel/MarginContainer" to="." method="_on_MarginContainer_resized"]
